--- a/index.html
+++ b/index.html
@@ -2,12 +2,65 @@
 <html lang="en">
   <head>
     <!--required meta--> 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Prisoner</title>
     <!--Bootstrap css-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!--Custom css-->
     <link rel="stylesheet" type="text/css" href="adventure.css">
+    <style>
+        body {
+            background-color: #1a1a1a;
+            color: #ffffff;
+            font-family: 'Courier New', monospace;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        #textarea {
+            background-color: #2a2a2a;
+            padding: 20px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            min-height: 200px;
+        }
+        #buttonarea {
+            text-align: center;
+            margin-top: 20px;
+        }
+        #usertext {
+            width: 80%;
+            max-width: 500px;
+            margin: 0 auto;
+            display: block;
+            padding: 10px;
+            background-color: #3a3a3a;
+            color: #ffffff;
+            border: 2px solid #4a4a4a;
+            border-radius: 5px;
+            font-size: 16px;
+            text-align: center;
+        }
+        #usertext:focus {
+            outline: none;
+            border-color: #6a6a6a;
+            box-shadow: 0 0 10px rgba(106, 106, 106, 0.5);
+        }
+        #usertext::placeholder {
+            color: #888888;
+        }
+        .btn-primary {
+            background-color: #4a4a4a;
+            border-color: #6a6a6a;
+        }
+        .btn-primary:hover {
+            background-color: #6a6a6a;
+            border-color: #8a8a8a;
+        }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -21,7 +74,7 @@
         <div id="details">
           <!--intro content-->
           <div class="justify-content-center mx-auto">
-            <p id="textarea" class="text-center">Click the button to start.</p><br /><br />
+            <div id="textarea" class="text-center">Click the button to start.</div>
             <div id="buttonarea">
               <button class="btn btn-primary" onclick="showCharacterCreation()">Start Game</button>
             </div>
@@ -58,6 +111,7 @@
       </div>
     </div>
     <!-- link to external JavaScript-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
